--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,6 +83,15 @@
   body {
     @apply bg-background text-foreground;
   }
+  /* Hide spinner buttons on number inputs */
+  input[type=number]::-webkit-outer-spin-button,
+  input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  input[type=number] {
+    -moz-appearance: textfield;
+  }
 }
 
 @media print {
